# rocky-demo

./: CMakeLists.txt  LICENSE  README.md  bootstrap-vcpkg.bat  main.cpp  vcpkg.json
vcpkg-ports/rocky/: portfile.cmake  vcpkg.json
vcpkg-ports/vsg/: portfile.cmake  vcpkg.json
